# docs_agent_backend

./: .dockerignore  .gitignore  .safety-project.ini  Dockerfile  Dockerfile.multi-stage  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/: auth.py  conversations.py  health.py  oauth_routes.py  routes.py  users.py
app/chat/: graph_workflow.py  processor.py  tools.py
app/config/: OAuth.py  embeddings.py  jwt_config.py  llm.py  load.py  middleware.py  prompt.py  qdrant.py  urls.py
app/core/: database.py  models.py
app/schemas/: auth_schema.py  chat_schema.py  credits_schema.py  tools_schema.py
app/services/: auth_service.py  conversation_service.py  credit_service.py  jwt_service.py  messages_service.py  oauth_service.py
app/tools/rag/: add_documents.py  create_collection.py  get_collections.py  pdf_chunker.py  search.py
app/utils/: chat.py  logging_utils.py  password_utils.py
tests/: test_chatbot.py
