[tool.poetry]
name = "cmd_docs_agent"
version = "0.1.0"
description = "Agent to help you understand your fav documentation"
authors = ["Pablo Marín pablomarin.aidev@gmail.com>"]
license = "No license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Main libs 
langchain = "^0.2.0"
openai = "^1.30.1"
qdrant-client = "^1.8.1"
tiktoken = "^0.7.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"

# PDF reading
PyPDF2 = "^3.0.1"

# ID
uuid = "^1.30"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
