[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-documentation-agent"
version = "0.1.0"
description = "Intelligent documentation assistant powered by Azure OpenAI, LangChain & Vector Search"
authors = ["Pablo Marín <pablomarin.aidev@gmail.com>"]
maintainers = ["Pablo Marín <pablomarin.aidev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pablomarin/ai-documentation-agent"
repository = "https://github.com/pablomarin/ai-documentation-agent"
documentation = "https://documentation-agent.com"
keywords = ["ai", "documentation", "assistant", "langchain", "azure", "openai", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"

# FastAPI and Web Framework
fastapi = "^0.115.12"        # Actualizado de 0.104.1 → 0.115.12
uvicorn = {extras = ["standard"], version = "^0.34.3"}  # Actualizado de 0.24.0 → 0.34.3
python-multipart = "^0.0.20"  # Actualizado de 0.0.6 → 0.0.20
starlette = "^0.46.2"        # Actualizado de 0.27.0 → 0.46.2

# AI and LangChain
langchain = "^0.3.25"        # Actualizado de 0.2.0 → 0.3.25
langchain-openai = "^0.3.21"  # Actualizado de 0.1.0 → 0.3.21
langchain-core = "^0.3.64"   # Actualizado de 0.2.0 → 0.3.64
langgraph = ">=0.5.0"         # Ya estaba correcto
tiktoken = "^0.9.0"          # Actualizado de 0.7.0 → 0.9.0

# Vector Database
qdrant-client = "^1.14.2"    # Actualizado de 1.8.1 → 1.14.2

# Database
sqlalchemy = "^2.0.41"       # Actualizado de 2.0.25 → 2.0.41
psycopg2-binary = "^2.9.10"  # Actualizado de 2.9.9 → 2.9.10
alembic = "^1.13.1"          # Mantener - no veo versión específica instalada

# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.5.0"}  # Actualizado de 3.3.0 → 3.5.0
passlib = {extras = ["bcrypt"], version = "^1.7.4"}           # Mantener - no veo versión específica
bcrypt = "^4.3.0"            # Actualizado de 4.1.2 → 4.3.0
authlib = "^1.6.0"           # Actualizado de 1.3.0 → 1.6.0

# Data Validation
pydantic = { version = "^2.11.5", extras = ["email"] }  # Actualizado de 2.7.1 → 2.11.5
pydantic-settings = "^2.9.1"  # Actualizado de 2.2.1 → 2.9.1

# Document Processing
PyPDF2 = "^3.0.1"           # Ya estaba correcto

# Utilities
python-dotenv = "^1.1.0"     # Actualizado de 1.0.1 → 1.1.0
gunicorn = "^23.0.0"         # Mantener - no veo versión específica instalada
itsdangerous = "^2.2.0" 

# Scripts que realmente usas
[tool.poetry.scripts]
dev = "uvicorn main:app --reload --port 8000"
